--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./server/bin/www",
     "dev":"DEBUG=dwpc-ii:server node --watch ./bin/www"
   },
   "dependencies": {
