--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/bin/www",
-    "dev":"DEBUG=dwpc-ii:server node --watch ./bin/www"
+    "start": "node ./dist/routes/bin/www",
+    "dev":"DEBUG=dwpc-ii:server && babel--watch ./server/bin/www",
+    "build":"npm run clean && babel ./server --out-dir dist --copy-files",
+    "clean": "rm -rf ./dist"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,6 +14,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "webpack-dev-middleware": "^6.0.2",
+    "webpack-hot-middleware": "^2.25.3"
+    
   }
 }
