--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "scripts": {
     "start": "node ./dist/routes/bin/www",
-    "dev":"DEBUG=dwpc-ii:server && babel--watch ./server/bin/www",
-    "build":"npm run clean && babel ./server --out-dir dist --copy-files",
+    "dev": "DEBUG=dwpc-ii:server && babel--watch ./server/bin/www",
+    "devc" : "NODE_ENV=development webpack serve --config ./webpack.config.js --mode development",
+    "build": "npm run clean && babel ./server --out-dir dist --copy-files",
     "clean": "rm -rf ./dist"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "webpack-dev-middleware": "^6.0.2",
     "webpack-hot-middleware": "^2.25.3"
-    
+  },
+  "devDependencies": {
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
