--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-hot-middleware": "^2.25.3"
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
