--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/routes/bin/www",
-    "dev": "DEBUG=dwpc-ii:server && babel--watch ./server/bin/www",
+    "start": "node ./server/bin/www",
+    "dev": "nodemon --exec babel-node ./server/bin/www",
     "devc": "NODE_ENV=development && webpack serve --config ./webpack.dev.config.js --mode development",
-    "build": "npm run clean && babel ./server --out-dir dist --copy-files",
-    "clean": "rm -rf ./dist"
+    "devb": "babel-watch ./server/bin/www",
+    "cleans": "rm -rf dist",
+    "cleanc": "rm -f ./public/bundle.js",
+    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
+    "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
+    "build": "npm run b:c && npm run b:s"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -20,6 +24,7 @@
     "webpack-hot-middleware": "^2.25.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
     "babel-loader": "^9.1.3",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
