--- a/package.json
+++ b/package.json
@@ -1,32 +1,58 @@
 {
-  "name": "dwpc-ii",
+  "name": "projnotes-2023a-class",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/bin/www",
-    "dev": "nodemon --exec babel-node ./server/bin/www",
-    "devc": "NODE_ENV=development && webpack serve --config ./webpack.dev.config.js --mode development",
-    "devb": "babel-watch ./server/bin/www",
-    "cleans": "rm -rf dist",
-    "cleanc": "rm -f ./public/bundle.js",
-    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
-    "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
-    "build": "npm run b:c && npm run b:s"
+    "start": "NODE_ENV=production DEBUG=projnotes node ./dist/bin/www",
+    "dev": "NODE_ENV=development DEBUG=projnotes babel-watch --watch ./server/views ./server/bin/www",
+    "devc": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
+    "build": "npm run buildc && npm run builds",
+    "builds": "npm run clean && babel ./server --out-dir dist --copy-files",
+    "buildc": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
+    "clean": "rm -rf ./dist",
+    "cleanc": "rm -f ./public/bundle.js ./public/styles/app.css",
+    "lint:c": "eslint ./client/**/*.js",
+    "lint:s": "eslint ./server/**/*.js",
+    "clean:logs": "rm -rf ./server/logs/*.log"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "mongoose": "^7.2.0",
     "morgan": "~1.9.1",
+    "supports-color": "^9.3.1",
+    "webpack": "^5.76.1",
     "webpack-dev-middleware": "^6.0.2",
-    "webpack-hot-middleware": "^2.25.3"
+    "webpack-hot-middleware": "^2.25.3",
+    "winston": "^3.8.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.20",
-    "babel-loader": "^9.1.3",
-    "webpack": "^5.76.1",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-preset-minify": "^0.5.2",
+    "babel-watch": "^7.7.2",
+    "core-js": "^3.29.1",
+    "css-loader": "^6.7.3",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-webpack-plugin": "^4.0.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "prettier": "^2.8.7",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
