✨ Feature: Webpack Middleware

--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "projnotes-2023a-class",
   "version": "0.0.0",
-  "private": true,
+  "private": true,  
   "scripts": {
-    "start": "NODE_ENV=production DEBUG=projnotes node ./dist/bin/www",
-    "dev": "NODE_ENV=development DEBUG=projnotes babel-watch --watch ./server/views ./server/bin/www",
+    "start": "node ./dist/bin/www",
+    "dev": "NODE_ENV=development DEBUG=dwpcii:server babel-watch ./server/bin/www",
+    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
     "devc": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
-    "build": "npm run buildc && npm run builds",
-    "builds": "npm run clean && babel ./server --out-dir dist --copy-files",
-    "buildc": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
-    "clean": "rm -rf ./dist",
+    "cleans": "rm -rf ./dist",
     "cleanc": "rm -f ./public/bundle.js ./public/styles/app.css",
-    "lint:c": "eslint ./client/**/*.js",
-    "lint:s": "eslint ./server/**/*.js",
-    "clean:logs": "rm -rf ./server/logs/*.log"
+    "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
+    "build": "npm run b:c && npm run b:s"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -28,8 +25,6 @@
     "morgan": "~1.9.1",
     "supports-color": "^9.3.1",
     "webpack": "^5.76.1",
-    "webpack-dev-middleware": "^6.0.2",
-    "webpack-hot-middleware": "^2.25.3",
     "winston": "^3.8.2",
     "yup": "^1.2.0"
   },
@@ -54,6 +49,8 @@
     "mini-css-extract-plugin": "^2.7.5",
     "prettier": "^2.8.7",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-hot-middleware": "^2.25.4"
   }
 }
