--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-    "presets": [["@babel/preset-env",{
-        "targets": { "node": "current"}
-    }]]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": { "node": "current" }
+      }
+    ]
+  ]
 }
