--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,20 @@
 {
-    "parser": "@baabel/eslint-parser",
-    "plugins": ["prettier"],
-    "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": "airbnb-base",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-console":"off",
-        "prettier/prettier":["error"]
-    }
+  "parser": "@babel/eslint-parser",
+  "extends":["airbnb-base", "prettier"],
+  "plugins": ["prettier"],
+  "rules":{
+    "no-console":"off",
+    "prettier/prettier": ["error"]
+  },
+  "env": {
+    "es6": true,
+    "node": true,
+    "browser": true
+  },
+  "settings": {
+    "import/resolver" : { "babel-module" : {}}
+  },
+  "globals": {
+    "__rootdir": "readonly"
+  }
 }
