--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
     "devc": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
     "cleans": "rm -rf ./dist",
+    "clean:logs" : "rm -rf ./server/logs/*.log",
     "cleanc": "rm -f ./public/bundle.js ./public/styles/app.css",
     "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
-    "build": "npm run b:c && npm run b:s"
+    "build": "npm run b:c && npm run b:s",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -47,10 +51,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-webpack-plugin": "^4.0.1",
     "mini-css-extract-plugin": "^2.7.5",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "webpack-cli": "^5.0.1",
     "webpack-dev-middleware": "^6.1.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-hot-middleware": "^2.25.4"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
   }
 }
