--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,6 +1,6 @@
 {
-    "semi": true,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "printWidth": 8
+  "semi": true,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 80
 }
