--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/bin/www",
-    "dev": "NODE_ENV=development DEBUG=dwpcii:server babel-watch ./server/bin/www",
-    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
+    "start": "NODE_ENV=production PORT=3000 APP_URL='http://localhost' DEBUG=projnotes node ./server/bin/www",
+    "dev": "NODE_ENV=development PORT=3000 APP_URL='http://localhost' DEBUG=projnotes babel-watch --watch ./server/views ./server/bin/www",
     "devc": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
-    "clean:logs": "rm -rf ./server/logs/*.log",
+    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
+    "clean:logs": "rm -rf ./server/logs/",
     "cleanc": "rm -f ./public/bundle.js ./public/styles/app.css",
     "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
     "build": "npm run b:c && npm run b:s",
