🚧 User and Project create

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "supports-color": "^9.3.1",
     "webpack": "^5.76.1",
     "winston": "^3.8.2",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "webpack-hot-middleware": "^2.25.4",
+    "webpack-dev-middleware": "^6.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
@@ -52,9 +54,7 @@
     "mini-css-extract-plugin": "^2.7.5",
     "prettier": "^2.8.8",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-middleware": "^6.1.1",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-hot-middleware": "^2.25.4"
+    "webpack-dev-server": "^4.11.1"
   },
   "prettier": {
     "trailingComma": "all",
