--- a/package.json
+++ b/package.json
@@ -1,65 +1,50 @@
 {
-  "name": "projnotes-2023a-class",
+  "name": "delete-dwpcii",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production PORT=3000 APP_URL='http://localhost' DEBUG=projnotes node ./server/bin/www",
-    "dev": "NODE_ENV=development PORT=3000 APP_URL='http://localhost' DEBUG=projnotes babel-watch --watch ./server/views ./server/bin/www",
-    "devc": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
-    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
-    "clean:logs": "rm -rf ./server/logs/",
-    "cleanc": "rm -f ./public/bundle.js ./public/styles/app.css",
     "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
+    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files",
     "build": "npm run b:c && npm run b:s",
-    "lint": "eslint .",
-    "format": "prettier --write ."
+    "clean:logs": "rm -rf ./server/logs/*.log",
+    "cleanc": "rm -f ./public/bundle.js ./public/styles/app.css",
+    "cleans": "rm -rf ./dist",
+    "dev": "NODE_ENV=development DEBUG=dwpcii:server babel-watch ./server/bin/www",
+    "devc": "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
+    "start": "node ./dist/bin/www"
   },
   "dependencies": {
-    "app-root-path": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "~4.16.1",
     "express-handlebars": "^7.1.2",
-    "hbs": "^4.2.0",
+    "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
-    "mongoose": "^7.2.0",
     "morgan": "~1.9.1",
-    "supports-color": "^9.3.1",
     "webpack": "^5.76.1",
-    "winston": "^3.8.2",
-    "yup": "^1.2.0",
+    "webpack-dev-middleware": "^6.1.1",
     "webpack-hot-middleware": "^2.25.4",
-    "webpack-dev-middleware": "^6.1.1"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.17",
     "@babel/eslint-parser": "^7.22.15",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-preset-minify": "^0.5.2",
-    "babel-watch": "^7.7.2",
-    "core-js": "^3.29.1",
-    "css-loader": "^6.7.3",
+    "@babel/node": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "babel-loader": "^9.1.3",
+    "babel-watch": "^7.8.1",
+    "core-js": "^3.32.2",
+    "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-webpack-plugin": "^4.0.1",
-    "mini-css-extract-plugin": "^2.7.5",
-    "prettier": "^2.8.8",
+    "mini-css-extract-plugin": "^2.7.6",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
-  },
-  "prettier": {
-    "trailingComma": "all",
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": true
   }
 }
