--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,22 @@
 {
   "parser": "@babel/eslint-parser",
-  "extends":["airbnb-base", "prettier"],
   "plugins": ["prettier"],
-  "rules":{
-    "no-console":"off",
-    "prettier/prettier": ["error"]
-  },
   "env": {
-    "es6": true,
-    "node": true,
-    "browser": true
+      "browser": true,
+      "es2021": true,
+      "node": true
   },
-  "settings": {
-    "import/resolver" : { "babel-module" : {}}
+  "extends": ["airbnb-base", "prettier"],
+  "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+  },
+  "rules": {
+      "no-console":"off",
+      "prettier/prettier": ["error"]
   },
   "globals": {
-    "__rootdir": "readonly",
-    "M": "writable"
+      "__rootdir": "readonly",
+      "M": "readonly"
   }
 }
