--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "~4.16.1",
     "express-handlebars": "^7.1.2",
-    "hbs": "^4.2.0",
+    "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
     "morgan": "~1.9.1",
     "webpack": "^5.76.1",
