--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "start": "node ./dist/bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "hbs": "~4.0.4",
+    "express-session": "^1.17.3",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
     "method-override": "^3.0.0",
