--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node ./dist/bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
@@ -28,6 +29,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.6.5",
     "morgan": "~1.9.1",
+    "validator": "^13.11.0",
     "webpack": "^5.76.1",
     "webpack-dev-middleware": "^6.1.1",
     "webpack-hot-middleware": "^2.25.4",
