--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,23 @@
 {
-  "parser": "@babel/eslint-parser",
-  "plugins": ["prettier"],
-  "env": {
-      "browser": true,
-      "es2021": true,
-      "node": true
-  },
-  "extends": ["airbnb-base", "prettier"],
-  "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-  },
-  "rules": {
-      "no-console":"off",
-      "prettier/prettier": ["error"]
-  },
-  "globals": {
-      "__rootdir": "readonly",
-      "M": "readonly"
-  }
+    "parser": "@babel/eslint-parser",
+    "plugins": ["prettier"],
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": ["airbnb-base", "prettier"],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "rules": {
+        "no-console":"off",
+        "prettier/prettier": ["error"],
+        "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+    },
+    "globals": {
+        "__rootdir": "readonly",
+        "M": "readonly"
+    }
 }
