✨ Creando usuario y Campos únicos

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
     "method-override": "^3.0.0",
-    "mongoose": "^7.6.5",
+    "mongoose": "^7.6.3",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "~1.9.1",
     "validator": "^13.11.0",
     "webpack": "^5.76.1",
